# automaton-auditor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  run_tests.py
.github/workflows/: ci.yml
audit/report_bypeer_received/: README.md  feedback.md
audit/report_onpeer_generated/: README.md
audit/report_onself_generated/: README.md  audit_20260228_034402.md  self_audit.md
reports/: interim_report.md
src/: cli.py  graph.py  rubric_loader.py  state.py
src/nodes/: detectives.py  judges.py  justice.py  vision_inspector.py
src/tools/: doc_tools.py  repo_tools.py
tests/: test_graph.py  test_state.py  test_tools.py
