[project]
name = "automaton-auditor"
version = "0.1.0"
description = "A multi-agent LangGraph swarm for autonomous code audit and governance"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Tsegay", email = "assefatsegay600@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    # Core dependencies - all compatible with Python 3.13
    "langgraph>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "langchain-anthropic>=0.3.0,<0.4.0",
    "langsmith>=0.1.0,<0.2.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",

    # Tools
    "GitPython>=3.1.0,<4.0.0",
    "PyPDF2>=3.0.0,<4.0.0",
    "pypdf>=5.0.0,<6.0.0",
    "chromadb>=0.5.0,<0.6.0",
    "sentence-transformers>=3.0.0,<4.0.0",

    # AST parsing - built-in, no install needed

    # Optional: Vision
    "pillow>=10.0.0,<11.0.0",
    "opencv-python>=4.10.0,<5.0.0",

    # CLI
    "typer>=0.12.0,<0.13.0",
    "rich>=13.0.0,<14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "black>=24.0.0,<25.0.0",
    "ruff>=0.6.0,<0.7.0",
    "mypy>=1.11.0,<2.0.0",
    "pre-commit>=3.8.0,<4.0.0",
]

vision = [
    "pillow>=10.0.0,<11.0.0",
    "opencv-python>=4.10.0,<5.0.0",
    "langchain-community>=0.3.0,<0.4.0",
]

[project.scripts]
# This is the CORRECTED line - points to src/cli.py main()
automaton-auditor = "src.cli:main"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["automaton_auditor*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W", "B", "C4", "ARG"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG001"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ast: AST parsing tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/test_*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]